--- a/007_File_Handling.ipynb
+++ b/007_File_Handling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdcJ3WK6VAIGubGnybC2Z5",
+      "authorship_tag": "ABX9TyPfn2qUBhGebTSGpJ5UHzWU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -334,6 +334,112 @@
             "11\n",
             "Hello world\n",
             "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Exception Handling"
+      ],
+      "metadata": {
+        "id": "r9glNHHQe52Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "\n",
+        "try:\n",
+        "  a = 10 / n\n",
+        "except ZeroDivisionError:\n",
+        "  print(\"you can't divide a number by 0\")\n",
+        "\n",
+        "print(\"hello world\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Xr2Mvrhe8gz",
+        "outputId": "2424d44f-65fb-493e-f4b2-2a0bbfbebc76"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "division by zero\n",
+            "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  x = y\n",
+        "except ZeroDivisionError:\n",
+        "  print(\"you can't divide a number by 0\")\n",
+        "except Exception as e:\n",
+        "  print(e)\n",
+        "\n",
+        "print(\"hello world\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_TAZmIzwfzE_",
+        "outputId": "fb5a4966-5441-45b5-b3f6-30e4daf45326"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name 'y' is not defined\n",
+            "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# model train\n",
+        "\n",
+        "try:\n",
+        "  file = open(\"./sample_data/data1.txt\", \"r\")\n",
+        "except Exception as e:\n",
+        "  print(e)\n",
+        "else:\n",
+        "  # model train\n",
+        "  print(file.read())\n",
+        "finally:\n",
+        "  print(\"Gpu is stopped\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0EzTC4tthDQm",
+        "outputId": "cecbf3f3-52c6-4df4-cd83-ae36560a2088"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n",
+            "Gpu is stopped\n"
           ]
         }
       ]
